refactor: arrange icons, src-files

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>SINGOLO</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/src/css/reset.css">
+    <link rel="stylesheet" href="assets/src/css/style.css">
   </head>
   <body id="headers">
     <div class="container">
@@ -13,7 +13,7 @@
         <h1 class="logo">
             SINGOLO
         </h1>
-        <img class="logo-icon" src="assets/SINGOLO.png" alt="logo">
+        <img class="logo-icon" src="assets/icon/logo/SINGOLO.png" alt="logo">
         <nav>
             <ul>
                 <li>
@@ -59,18 +59,18 @@
           <a class="slider__btn slider__btn_next"></a>
           <div class="slide slide_1">
             <a class="btn btn_mobile1">
-              <img class="btn__phone-screen" src="assets/phone/screen1.png">
-              <img class="btn__phone-dot" src="assets/phone/RedDot.png">
+              <img class="btn__phone-screen" src="assets/icon/phone/screen1.png">
+              <img class="btn__phone-dot" src="assets/icon/phone/RedDot.png">
             </a>
             <a class="btn btn_mobile2">
-              <img class="btn__phone-screen" src="assets/phone/screen2.png">
-              <img class="btn__phone-dot" src="assets/phone/RedDot.png">
+              <img class="btn__phone-screen" src="assets/icon/phone/screen2.png">
+              <img class="btn__phone-dot" src="assets/icon/phone/RedDot.png">
             </a>
           </div>
           <div class="slide slide_2">
             <a class="btn btn_mobile3">
-              <img class="btn__phone-screen" src="assets/phone/screen3.png">
-              <img class="btn__phone-dot" src="assets/phone/RedDot.png">
+              <img class="btn__phone-screen" src="assets/icon/phone/screen3.png">
+              <img class="btn__phone-dot" src="assets/icon/phone/RedDot.png">
             </a>
           </div>
         </div>
@@ -85,7 +85,7 @@
           </p>
           <ul class="services__list">
             <li class="services__item">
-              <img class="service__icon" src="assets/pen.png" alt="pen">
+              <img class="service__icon" src="assets/icon/service-icon/pen.png" alt="pen">
               <span>
                 <span class="service__name">
                   Custom Design
@@ -99,7 +99,7 @@
               </span>
             </li>
             <li class="services__item">
-              <img class="service__icon" src="assets/bulb.png" alt="bulb">
+              <img class="service__icon" src="assets/icon/service-icon/bulb.png" alt="bulb">
               <span>
                 <span class="service__name">
                 Inovative Ideas
@@ -113,7 +113,7 @@
               </span>
             </li>
             <li class="services__item">
-              <img class="service__icon" src="assets/heart.png" alt="heart">
+              <img class="service__icon" src="assets/icon/service-icon/heart.png" alt="heart">
               <span>
                 <span class="service__name">
                   Love Is The Answer
@@ -127,7 +127,7 @@
               </span>
             </li>
             <li class="services__item">
-              <img class="service__icon" src="assets/phone.png" alt="phone">
+              <img class="service__icon" src="assets/icon/service-icon/phone.png" alt="phone">
               <span>
                 <span class="service__name">
                   Responsive Layout
@@ -141,7 +141,7 @@
               </span>
             </li>
             <li class="services__item">
-              <img class="service__icon" src="assets/bubble.png" alt="bubble">
+              <img class="service__icon" src="assets/icon/service-icon/bubble.png" alt="bubble">
               <span>
                 <span class="service__name">
                   24 / 7 Support
@@ -155,7 +155,7 @@
               </span>
             </li>
             <li class="services__item">
-              <img class="service__icon" src="assets/star.png" alt="star">
+              <img class="service__icon" src="assets/icon/service-icon/star.png" alt="star">
               <span>
                 <span class="service__name">
                   Feel Like A Star
@@ -204,40 +204,40 @@
           </ul>
           <ul class="portfolio__gallery">
             <li class="portfolio__img" data-order="all">
-              <img src="assets/portfolio/project_1.jpg" alt="project">
+              <img src="assets/icon/portfolio/project_1.jpg" alt="project">
             </li>
             <li class="portfolio__img" data-order="all">
-              <img src="assets/portfolio/project_2.jpg" alt="project">
+              <img src="assets/icon/portfolio/project_2.jpg" alt="project">
             </li>
             <li class="portfolio__img" data-order="all">
-              <img src="assets/portfolio/project_3.jpg" alt="project">
+              <img src="assets/icon/portfolio/project_3.jpg" alt="project">
             </li>
             <li class="portfolio__img" data-order="web">
-              <img src="assets/portfolio/project_4.jpg" alt="project">
+              <img src="assets/icon/portfolio/project_4.jpg" alt="project">
             </li>
             <li class="portfolio__img" data-order="web">
-              <img src="assets/portfolio/project_5.jpg" alt="project">
+              <img src="assets/icon/portfolio/project_5.jpg" alt="project">
             </li>
             <li class="portfolio__img" data-order="web">
-              <img src="assets/portfolio/project_6.jpg" alt="project">
+              <img src="assets/icon/portfolio/project_6.jpg" alt="project">
             </li>
             <li class="portfolio__img" data-order="graphic">
-              <img src="assets/portfolio/project_7.jpg" alt="project">
+              <img src="assets/icon/portfolio/project_7.jpg" alt="project">
             </li>
             <li class="portfolio__img" data-order="graphic">
-              <img src="assets/portfolio/project_8.jpg" alt="project">
+              <img src="assets/icon/portfolio/project_8.jpg" alt="project">
             </li>
             <li class="portfolio__img" data-order="graphic">
-              <img src="assets/portfolio/project_9.jpg" alt="project">
+              <img src="assets/icon/portfolio/project_9.jpg" alt="project">
             </li>
             <li class="portfolio__img" data-order="art">
-              <img src="assets/portfolio/project_10.jpg" alt="project">
+              <img src="assets/icon/portfolio/project_10.jpg" alt="project">
             </li>
             <li class="portfolio__img" data-order="art">
-              <img src="assets/portfolio/project_11.jpg" alt="project">
+              <img src="assets/icon/portfolio/project_11.jpg" alt="project">
             </li>
             <li class="portfolio__img" data-order="art">
-              <img src="assets/portfolio/project_12.jpg" alt="project">
+              <img src="assets/icon/portfolio/project_12.jpg" alt="project">
             </li>
           </ul>
         </div>
@@ -254,7 +254,7 @@
         </p>
         <ul class="resume__list">
           <li class="resume__item">
-            <img class="resume__employee-photo" src="assets/about_us/photo1.jpg" alt="employee">
+            <img class="resume__employee-photo" src="assets/icon/about_us/photo1.jpg" alt="employee">
             <p class="resume__employee-name">
               Adam Jensen
             </p>
@@ -263,21 +263,21 @@
             </p>
             <p class="resume__communication">
               <a href="">
-                <img class="resume__social-icon" src="assets/social_icon/facebook.png" alt="facebook">
+                <img class="resume__social-icon" src="assets/icon/social_icon/facebook.png" alt="facebook">
               </a>
               <a href="">
-                <img class="resume__social-icon" src="assets/social_icon/google+.png" alt="google">
+                <img class="resume__social-icon" src="assets/icon/social_icon/google+.png" alt="google">
               </a>
               <a href="">
-                <img class="resume__social-icon" src="assets/social_icon/twitter.png" alt="twitter">
+                <img class="resume__social-icon" src="assets/icon/social_icon/twitter.png" alt="twitter">
               </a>
               <a href="">
-                <img class="resume__social-icon" src="assets/social_icon/linkedin.png" alt="linkedin">
+                <img class="resume__social-icon" src="assets/icon/social_icon/linkedin.png" alt="linkedin">
               </a>
             </p>
           </li>
           <li class="resume__item">
-            <img class="resume__employee-photo" src="assets/about_us/photo2.jpg" alt="employee">
+            <img class="resume__employee-photo" src="assets/icon/about_us/photo2.jpg" alt="employee">
             <p class="resume__employee-name">
               Desmond Miles
             </p>
@@ -286,21 +286,21 @@
             </p>
             <p class="resume__communication">
               <a href="">
-                <img class="resume__social-icon" src="assets/social_icon/facebook.png" alt="facebook">
+                <img class="resume__social-icon" src="assets/icon/social_icon/facebook.png" alt="facebook">
               </a>
               <a href="">
-                <img class="resume__social-icon" src="assets/social_icon/google+.png" alt="google">
+                <img class="resume__social-icon" src="assets/icon/social_icon/google+.png" alt="google">
               </a>
               <a href="">
-                <img class="resume__social-icon" src="assets/social_icon/twitter.png" alt="twitter">
+                <img class="resume__social-icon" src="assets/icon/social_icon/twitter.png" alt="twitter">
               </a>
               <a href="">
-                <img class="resume__social-icon" src="assets/social_icon/linkedin.png" alt="linkedin">
+                <img class="resume__social-icon" src="assets/icon/social_icon/linkedin.png" alt="linkedin">
               </a>
             </p>
           </li>
           <li class="resume__item">
-            <img class="resume__employee-photo" src="assets/about_us/photo3.jpg" alt="employee">
+            <img class="resume__employee-photo" src="assets/icon/about_us/photo3.jpg" alt="employee">
             <p class="resume__employee-name">
               Scolara Visari
             </p>
@@ -309,16 +309,16 @@
             </p>
             <p class="resume__communication">
               <a href="">
-                <img class="resume__social-icon" src="assets/social_icon/facebook.png" alt="facebook">
+                <img class="resume__social-icon" src="assets/icon/social_icon/facebook.png" alt="facebook">
               </a>
               <a href="">
-                <img class="resume__social-icon" src="assets/social_icon/google+.png" alt="google">
+                <img class="resume__social-icon" src="assets/icon/social_icon/google+.png" alt="google">
               </a>
               <a href="">
-                <img class="resume__social-icon" src="assets/social_icon/twitter.png" alt="twitter">
+                <img class="resume__social-icon" src="assets/icon/social_icon/twitter.png" alt="twitter">
               </a>
               <a href="">
-                <img class="resume__social-icon" src="assets/social_icon/linkedin.png" alt="linkedin">
+                <img class="resume__social-icon" src="assets/icon/social_icon/linkedin.png" alt="linkedin">
               </a>
             </p>
           </li>
@@ -354,7 +354,7 @@
             <ul class="contacts__information">
               <li class="contacts__item">
                 <span>
-                  <img src="assets/contacts/location.png" alt="location">
+                  <img src="assets/icon/contacts/location.png" alt="location">
                 </span>
                 <a href="">
                   Elm St. 14/05 Lost City
@@ -362,7 +362,7 @@
               </li>
               <li class="contacts__item">
                 <span>
-                  <img src="assets/contacts/phone.png" alt="phone">
+                  <img src="assets/icon/contacts/phone.png" alt="phone">
                 </span>
                 <a href="tel:035283318635">
                   03528 331 86 35
@@ -370,7 +370,7 @@
               </li>
               <li class="contacts__item">
                 <span>
-                  <img src="assets/contacts/mail.png" alt="mail">
+                  <img src="assets/icon/contacts/mail.png" alt="mail">
                 </span>
                 <a href="mail:info@singolo.com">
                   info@singolo.com
@@ -387,20 +387,20 @@
         </h3>
         <p class="communication">
           <a>
-            <img src="assets/social_icon/facebook.png" alt="facebook">
+            <img src="assets/icon/social_icon/facebook.png" alt="facebook">
           </a>
           <a>
-            <img src="assets/social_icon/google+.png" alt="google">
+            <img src="assets/icon/social_icon/google+.png" alt="google">
           </a>
           <a>
-            <img src="assets/social_icon/twitter.png" alt="twitter">
+            <img src="assets/icon/social_icon/twitter.png" alt="twitter">
           </a>
           <a>
-            <img src="assets/social_icon/linkedin.png" alt="linkedin">
+            <img src="assets/icon/social_icon/linkedin.png" alt="linkedin">
           </a>
         </p>
       </footer>
     </div>
-      <script src="script.js" defer></script>
+      <script src="assets/src/script/script.js" defer></script>
   </body>
 </html>
