feat: add validation check

--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
         </p>
         <div class="relation__main">
           <form class="message">
-            <input type="text" placeholder="Name (Required)" required minlength="3">
-            <input type="email" placeholder="Email (Required)" required>
+            <input class="message__name" type="text" placeholder="Name (Required)" required minlength="3">
+            <input class="message__email" type="email" placeholder="Email (Required)" required>
             <input class="message__subject" type="text" placeholder="Subject">
             <textarea class="message__content" type="text" rows="12" placeholder="Describe your project in detail..." maxlength="500"></textarea>
             <button class="message__btn" type="submit">Отправить</button>
