feat: add style for  medium screen

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             <input class="message__email" type="email" placeholder="Email (Required)" required>
             <input class="message__subject" type="text" placeholder="Subject">
             <textarea class="message__content" type="text" rows="11" placeholder="Describe your project in detail..." maxlength="500"></textarea>
-            <button class="message__btn" type="submit">Отправить</button>
+            <button class="message__btn" type="submit">SEND</button>
           </form>
           <div class="contacts">
             <h3 class="contacts__title">
