--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <h1 class="logo">
             SINGOLO
         </h1>
+        <a class="burger"></a>
         <img class="logo-icon" src="assets/icon/logo/SINGOLO.png" alt="logo">
         <nav>
             <ul>
